only display date of post

--- a/_themes/purity/templates/article.html
+++ b/_themes/purity/templates/article.html
@@ -8,7 +8,7 @@
 {% block body %}
 <h1>{{ article.title }}</h1>
 <span class="post-meta">
-  Posted on <strong>{{ article.date| strftime('%a, %b %d, %Y, %I:%M %p %Z') }}</strong>
+  Posted on <strong>{{ article.date| strftime('%a, %b %d, %Y') }}</strong>
 </span>
 
 {{ article.content }}
