--- a/_themes/purity/templates/archives.html
+++ b/_themes/purity/templates/archives.html
@@ -6,7 +6,7 @@
             <div class="post">
               <h1 class="title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
               <span class="post-meta">
-                Posted on <strong>{{ article.date| strftime('%a, %b %d, %Y, %I:%M %p %Z') }}</strong>
+                Posted on <strong>{{ article.date| strftime('%a, %b %d, %Y') }}</strong>
               </span>
 
 {{ article.summary}}
