--- a/_themes/purity/templates/base.html
+++ b/_themes/purity/templates/base.html
@@ -22,8 +22,10 @@
     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/custom.css" media="screen">
     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/pygments.css" media="screen">
 
-    <link rel="alternate" type="application/rss+xml" href="{{ SITEURL }}/rss.xml">
     <link rel="shortcut icon" href="{{ SITEURL }}/favicon.ico">
+    {%- if FEED_ALL_ATOM %}
+    <link rel="alternate" type="application/rss+xml" href="{{ SITEURL }}/{{ FEED_ALL_ATOM }}">
+    {%- endif %}
 
     <script type="text/javascript" src="{{ SITEURL }}/theme/js/twitter.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
