--- a/_themes/purity/templates/base.html
+++ b/_themes/purity/templates/base.html
@@ -7,7 +7,7 @@
     <!-- The Open Graph -->
     <meta property="og:title" content="{{ self.title() }}">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://yosida95.com/{{ pagename }}{{ file_suffix }}">
+    <meta property="og:url" content="{{ SITEURL }}/{% block url %}{% endblock %}">
     <meta property="og:description" content="{{ description|striptags|e }}">
     <meta property="og:image" content="https://yosida95.com/_static/icon_200x200.png">
     <meta property="og:site_name" content="yosida95">
