--- a/_themes/purity/templates/base.html
+++ b/_themes/purity/templates/base.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/pygments.css" media="screen">
 
     <link rel="shortcut icon" href="{{ SITEURL }}/favicon.ico">
+    <link rel="canonical" href="{{ SITEURL }}/{{ self.url() }}">
     {%- if FEED_ALL_ATOM %}
     <link rel="alternate" type="application/rss+xml" href="{{ SITEURL }}/{{ FEED_ALL_ATOM }}">
     {%- endif %}
