refactor article summary with summary macro

--- a/_themes/purity/templates/period_archives.html
+++ b/_themes/purity/templates/period_archives.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% from "base_helper.html" import archives with context %}
+{% from "index_helper.html" import summary with context %}
 
 {% block title -%}
 {{ period | reverse | join(' ') }}
@@ -10,14 +11,7 @@
 
 {% block body %}
 {%- for article in dates %}
-            <div class="post">
-              <h1 class="title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
-              <span class="post-meta">
-                Posted on <strong>{{ article.date| strftime('%a, %b %d, %Y') }}</strong>
-              </span>
-
-{{ article.summary}}
-            </div>
+            {{ summary(article=article) }}
 {%- endfor %}
 {%- endblock %}
 
