--- a/_themes/purity/templates/index.html
+++ b/_themes/purity/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% from "base_helper.html" import archives with context %}
+{% from "index_helper.html" import summary with context %}
 
 {% block url %}{{ INDEX_URL }}{% endblock %}
 
@@ -8,12 +9,7 @@
 
 {% block body %}
 {%- for article in dates_page.object_list %}
-            <div class="post">
-              <h1 class="title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
-              <span class="post-meta">
-                Posted on <strong>{{ article.date| strftime('%a, %b %d, %Y') }}</strong>
-              </span>
-            </div>
+            {{ summary(article=article) }}
 {%- endfor %}
 
 {%- if dates_page.has_other_pages() %}
@@ -28,25 +24,4 @@
 {%- endif %}
 {%- endblock %}
 
-{%- macro category_list(post_categories) -%}
-    {%- if post_categories -%}
-      {% for link, category in post_categories -%}
-        <a href="{{ SITEURL }}/categories/{{ link }}.html">{{ category }}</a>
-        {%- if not loop.last -%}, {% endif -%}
-      {% endfor -%}
-    {%- else -%}
-    Uncategorized
-    {%- endif -%}
-{%- endmacro -%}
-
-{%- macro tag_list(post_tags) -%}
-    {%- if post_tags -%}
-      {% for link, tag in post_tags -%}
-        <a href="{{ SITEURL }}/tags/{{ link }}.html }}">{{ tag }}</a>
-        {%- if not loop.last -%}, {% endif -%}
-      {% endfor -%}
-    {%- else -%}
-    Untagged
-    {%- endif -%}
-{%- endmacro -%}
 {# vim:set filetype=htmljinja: #}
