fix sidebar widgets to use all_articles instead of articles

--- a/_themes/purity/templates/base.html
+++ b/_themes/purity/templates/base.html
@@ -93,16 +93,15 @@
               <p><a class="twitter-follow-button" data-show-count="false" href="https://twitter.com/yosida95">Follow @yosida95</a></p>
             </div>
 
+            {%- with articles = (all_articles or articles)|sort(attribute='date', reverse=true) %}
             {%- if articles|length > 0 %}
             <div class="sidebar_item">
               <h5>Recent Articles</h5>
-              {%- with articles = articles|sort(attribute='date', reverse=true) %}
               <ul>
               {%- for article in articles[:DEFAULT_PAGINATION] %}
                 <li><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></li>
               {%- endfor %}
               </ul>
-              {%- endwith %}
             </div>
 
             <div class="sidebar_item">
@@ -112,6 +111,7 @@
               {%- endblock %}
             </div>
             {%- endif %}
+            {%- endwith %}
           </div>
           <div class="clear"></div>
         </div><!-- .inner End -->
