--- a/_themes/purity/templates/article.html
+++ b/_themes/purity/templates/article.html
@@ -2,9 +2,17 @@
 
 {% from "base_helper.html" import archives, taglist with context %}
 
+{% block title %}{{ article.title }}{% endblock %}
+
 {% block url %}{{ article.url }}{% endblock %}
 
-{% block title %}{{ article.title }}{% endblock %}
+{% block thumbnail -%}
+{%- if 'thumbnail' in article.metadata -%}
+{{ article.thumbnail }}
+{%- else -%}
+{{ super() }}
+{%- endif -%}
+{%- endblock %}
 
 {% block archives %}{{ archives(expand=article) }}{% endblock %}
 
