--- a/_themes/purity/templates/page.html
+++ b/_themes/purity/templates/page.html
@@ -1,10 +1,16 @@
 {#- vim:set filetype=htmljinja shiftwidth=2: -#}
 {% extends "base.html" %}
 
+{% block title %}{{ page.title }}{% endblock %}
+
 {% block url %}{{ page.url }}{% endblock %}
 
-{% block title -%}
-{{ page.title }}
+{% block thumbnail -%}
+{%- if 'thumbnail' in page.metadata -%}
+{{ page.thumbnail }}
+{%- else -%}
+{{ super() }}
+{%- endif -%}
 {%- endblock %}
 
 {% block body %}
